2013-05-26: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Palettes/3Containers/GormNSOutlineView.m
	* GormCore/GormMatrixEditor.m
	* GormCore/GormClassEditor.m
	  some int -> NSInteger and float -> CGFloat transitions
	  spotted by libobjc2 runtime in debug mode
2013-04-14 13:19-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ANNOUNCE
	* Documentation/news.texi
	* GormInfo.plist
	* NEWS
	* Version: 1.2.20

2013-03-06 01:44-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormViewEditor.m: -handleNotification: touch document
	when text editing is completed.
	Fixes for bug #28643.

2013-03-06 00:05-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: Touch document when aligning views in
	-alignSelectedObjects:.
	* Palettes/4Data/DataPalette.m: -depositViewResourceFromPasteboard:..
	touch document when adding formatter.
	* Palettes/4Data/GormDateFormatterAttributesInspector.m
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m:
	-ok: touch document when changing formatter.
	Fixes for bug #28643.

2013-03-05 20:23-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormInternalViewEditor.m: touch document when font is
	changed in changeFont:

2013-02-25 15:07-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormWindowEditor.m: Second try to fix the previous
	issue.

2013-02-25 04:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormWindowEditor.m: Check the _firstResponder on
	the window to see if it is the same as the _initialFirstResponder.
	If it is, set it to nil as well in -unsetInitialFirstResponder:.

2013-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GormCore/GormObjectEditor.h
	* GormCore/GormObjectEditor.m
	* GormCore/GormPalettesManager.m
	* GormCore/GormSplitViewEditor.m
	* GormCore/GormViewEditor.m
	* GormCore/GormViewWithSubviewsEditor.m
	* GormCore/GormWindowEditor.m
	* Palettes/0Menus/GormMenuEditor.m